--- a/webapp/src/main/webapp/login.xhtml
+++ b/webapp/src/main/webapp/login.xhtml
@@ -14,7 +14,7 @@
 		<div class="ui-g-4" />
 		<div class="ui-g-4">
 			<h:form prependId="false" style="width: max-content;">
-				<p:fieldset id="login" legend="Acceso al Sistema">
+				<p:fieldset id="login" legend="Acceso al Mundo CIBERTEC">
 					<p:messages />
 					<h:panelGrid columns="3" cellpadding="3" style="margin-bottom:10px">
 						<h:outputText value="Usuario" />
