--- a/webapp/src/main/webapp/notas.xhtml
+++ b/webapp/src/main/webapp/notas.xhtml
@@ -115,8 +115,8 @@ PrimeFaces.locales['es'] = {
 	    			<h:outputText value="NOTA VIRTUAL"/>
 	    			<p:inputText value="#{notaView.nota.notaVirtual}"/>
 	    			
-	    			<h:outputText value="PROMEDIO"/>
-	    			<p:inputText value="#{notaView.nota.promedio}"/>
+<!-- 	    			<h:outputText value="PROMEDIO"/>
+	    			<p:inputText value="#{notaView.nota.promedio}"/> -->
 	    			  		
 	    			<h:outputText value="Alumno"/>
 	    			<p:selectOneMenu value="#{notaView.nota.alumno.codigoAlumno}">
